
2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, config.def: added free-redefines-position config option.

2017-09-10  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_int): corrected bitmask.
	* config.def, typeck.c: added line-col-zero-default and display-special-
	  fig-consts options. This reinstates GnuCOBOL's previous behaviour of
	  DISPLAYing a field on screen at the current position of the cursor and
	  disabling the MF DISPLAY SPACES extension.
	* parser.y: increase number of places which accept ZERO (including SIZE
	  clause).

2017-09-05  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_int): add bitmask to suppress runtime loss-of-data warning
	  on Windows.

2017-09-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_program_data): temporarily disabled ASSIGN
	  fields with changing address (BASED + LINKAGE) to prevent SIGSEGV
	  until code generation is changed, see bug #421
	* codegen.c: changed generated newlines/comments for file initialization

2017-09-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c, tree.c, tree.h, typeck.c: started to change compiler
	  internal variables to be unsigned int instead of int to prevent
	  C compiler warnings about a possible negative access to arrays
	  and sign mismatches in comparisons
	* codegen.c: output comment for decimal constants only if we have
	  actually generate decimal constants

2017-09-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: adjusted some missing context-sensitive options
	* reserved.c, parser.y: added parsing of PHYSICAL attribute in
	  LENGTH functions

2017-08-28  Edward Hart <edward.dan.hart@gmail.com>

	* field.c (validate_field_1): refactored.

2017-08-23  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_clean_up): added calls to (plex_call_destroy) and
	  (ylex_call_destroy), *actually* fixing bug #407.
	* pplex.l (ylex_clear_all): added calls to (cb_reset_78) and